force-app/main/default/objects/Televisit_Attendee__c/Televisit_Attendee__c.object-meta.xml
<CustomObject>
    <label>Televisit Attendee</label>
    <nameField>
        <label>Televisit Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Televisit Attendee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>