force-app/main/default/objects/Televisit_Attendee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Televisit Attendee</relationshipLabel>
    <relationshipName>Televisit_Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>