force-app/main/default/objects/Televisit_Attendee__c/fields/Is_First_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>