force-app/main/default/objects/Televisit_Attendee__c/fields/Participant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Last_Name__c</fullName>
    <label>Participant Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>