force-app/main/default/objects/Televisit_Attendee__c/fields/Televisit__c.field-meta.xml
<CustomField>
    <fullName>Televisit__c</fullName>
    <label>Televisit</label>
    <referenceTo>Televisit__c</referenceTo>
    <relationshipLabel>Televisit Attendee</relationshipLabel>
    <relationshipName>Televisit_Attendee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>