force-app/main/default/objects/Televisit_Attendee__c/fields/Televisit_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Televisit_Scheduled_Date__c</fullName>
    <label>Televisit Scheduled Date</label>
    <type>DateTime</type>
</CustomField>